--- a/templates/users/events_registration.html
+++ b/templates/users/events_registration.html
@@ -26,7 +26,7 @@
                 <textarea id="remarks" name="remarks" placeholder="Any additional comments"></textarea>
             </div>
         
-            <button type="submit" class="submit-btn">Register</button>
+            <button type="submit" class="submit-btnn">Register</button>
         </form>        
     </div>
 {% endblock body %}
