--- a/templates/users/contact_us.html
+++ b/templates/users/contact_us.html
@@ -6,7 +6,7 @@
 
 
     <div class="container about-us mt-5" style="width: 80%;">
-        <h1 class="text-center mb-4">About Us</h1>
+        <!-- <h1 class="text-center mb-4">About Us</h1> -->
 
         <!-- College Details -->
         <div class="college-details mb-5 text-center">
