--- a/templates/users/contact_us.html
+++ b/templates/users/contact_us.html
@@ -31,25 +31,32 @@
             <h2 class="text-center">Meet Our Team</h2>
             <div class="row text-center mt-4">
                 <div class="col-md-4">
-                    <img src="{{ url_for('static', filename='images/team1.jpg') }}" alt="Team Member 1" class="img-fluid rounded mb-3" style="max-width: 150px;">
+                    <img src="{{ url_for('static', filename='uploads/aaryan.jpg') }}" alt="Team Member 1" class="img-fluid rounded mb-3" style="max-width: 150px;">
                     <h5>Aaryan Agarwal</h5>
                     <p>Role: As the Project Lead, Aaryan Agarwal ensures the project runs smoothly and deadlines are met. He handles backend development, managing the server-side logic and database integration. Additionally, he contributes as a UI/UX designer, focusing on creating an intuitive and visually appealing interface for users.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="{{ url_for('static', filename='images/team2.jpg') }}" alt="Team Member 2" class="img-fluid rounded mb-3" style="max-width: 150px;">
+                    <img src="{{ url_for('static', filename='uploads/arpit.jpg') }}" alt="Team Member 2" class="img-fluid rounded mb-3" style="max-width: 150px;">
                     <h5>Arpit Sharma</h5>
                     <p>Role: Arpit Sharma is the Frontend Developer, designing and developing the website’s user interface to be responsive and interactive. He also oversee Quality Assurance, testing the project for bugs and ensuring it meets standards. Additionally, he maintain technical documentation and user manuals.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="{{ url_for('static', filename='images/team3.jpg') }}" alt="Team Member 3" class="img-fluid rounded mb-3" style="max-width: 150px;">
+                    <img src="{{ url_for('static', filename='uploads/abdul.jpg') }}" alt="Team Member 3" class="img-fluid rounded mb-3" style="max-width: 150px;">
                     <h5>D Abdul Rahaman</h5>
                     <p>Role: D Abdul Rahaman manages the database, ensuring its integrity and performance. He also design the system architecture to ensure scalability and robustness. As the Security Specialist, he implement measures to protect the project from vulnerabilities and attacks.</p>
                 </div>
             </div>
         </div>
-
-        
-
     </div>
+
+        <footer>
+            <div class="footer-content">
+                <p>&copy; 2024 PLANIFY. All Rights Reserved.</p>
+                <p>
+                    <a href="#" class="footer-link">Privacy Policy</a> | 
+                    <a href="#" class="footer-link">Terms of Service</a>
+                </p>
+            </div>
+        </footer>
 
 {% endblock body %}
