--- a/templates/users/events.html
+++ b/templates/users/events.html
@@ -35,4 +35,14 @@
             {% endfor %}
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 PLANIFY. All Rights Reserved.</p>
+            <p>
+                <a href="#" class="footer-link">Privacy Policy</a> | 
+                <a href="#" class="footer-link">Terms of Service</a>
+            </p>
+        </div>
+    </footer>
 {% endblock body %}
+
