--- a/static/users/events.css
+++ b/static/users/events.css
@@ -11,17 +11,16 @@ body {
     display: flex;
     justify-content: center;
     padding: 0 20px;
-    margin-top: 20%; /* Adjust based on navbar height */
+    margin-top: 35%; /* Adjust based on navbar height */
 }
 
 /* Event Cards Container */
 .event-cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 25px;
-    max-width: 1400px;
+    max-width: 1800px;
     justify-content: space-evenly;
-    padding-top: 20px;  /* Optional for better spacing */
+    /* padding-top: 225px;  Optional for better spacing */
 }
 
 /* Individual Event Card */
@@ -36,6 +35,7 @@ body {
     flex-direction: column;
     min-width: 250px; /* Ensure minimum width */
     max-width: 300px; /* Set max width to avoid overly large cards */
+    margin-bottom: 30px;
 }
 
 .event-card:hover {
@@ -54,7 +54,7 @@ body {
 .event-card img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 /* Event Details */
